[gd_scene load_steps=7 format=3 uid="uid://w1f4dho35qy2"]

[ext_resource type="Script" path="res://addons/ai_assistant_hub/ai_assistant_hub.gd" id="1_x668t"]
[ext_resource type="Texture2D" uid="uid://tvel41eepthx" path="res://addons/ai_assistant_hub/graphics/icons/Reload.svg" id="2_6xner"]
[ext_resource type="Texture2D" uid="uid://cb745elrh1ukv" path="res://addons/ai_assistant_hub/graphics/icons/Add.svg" id="3_57y2f"]
[ext_resource type="Texture2D" uid="uid://dctfmdvk5w5dk" path="res://addons/ai_assistant_hub/graphics/icons/upgrade_notif.svg" id="4_77wrn"]
[ext_resource type="Texture2D" uid="uid://c1ab17qlptks6" path="res://addons/ai_assistant_hub/graphics/icons/heart.svg" id="4_mwqwj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_541qc"]

[node name="AIAssistantHub" type="Control"]
custom_minimum_size = Vector2(0, 260)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_x668t")

[node name="ModelsHTTPRequest" type="HTTPRequest" parent="."]
unique_name_in_owner = true
accept_gzip = false
timeout = 10.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TabContainer" type="TabContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
current_tab = 0
drag_to_rearrange_enabled = true

[node name="AI Hub" type="MarginContainer" parent="VBoxContainer/TabContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10
metadata/_tab_index = 0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/TabContainer/AI Hub"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/TabContainer/AI Hub/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/TabContainer/AI Hub/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/TabContainer/AI Hub/VBoxContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderSmall"
text = "Summon
assistant:"

[node name="AssistantsRefreshBtn" type="Button" parent="VBoxContainer/TabContainer/AI Hub/VBoxContainer/HBoxContainer/HBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
size_flags_vertical = 4
icon = ExtResource("2_6xner")
icon_alignment = 1

[node name="NoAssistantsGuide" type="Label" parent="VBoxContainer/TabContainer/AI Hub/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "You have no assistant types! Create a new assistant type by selecting a model and clicking \"New assistant type\". Or manually create an AIAssistantResource in the assistants folder, then click the reload button. The folder is at:
res://addons/ai_assistant_hub/assistants"
autowrap_mode = 2

[node name="AssistantTypesContainer" type="HFlowContainer" parent="VBoxContainer/TabContainer/AI Hub/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/TabContainer/AI Hub/VBoxContainer"]
modulate = Color(1, 1, 1, 0.5)
layout_mode = 2
theme_override_constants/margin_top = -24
theme_override_constants/margin_bottom = -8

[node name="Label" type="Label" parent="VBoxContainer/TabContainer/AI Hub/VBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "Right-click to edit / delete"
horizontal_alignment = 2

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/TabContainer/AI Hub/VBoxContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/TabContainer/AI Hub/VBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 10
columns = 2

[node name="VBoxContainer2" type="HBoxContainer" parent="VBoxContainer/TabContainer/AI Hub/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="Label" type="Label" parent="VBoxContainer/TabContainer/AI Hub/VBoxContainer/GridContainer/VBoxContainer2"]
auto_translate_mode = 1
layout_mode = 2
size_flags_vertical = 0
text = "Available models"
horizontal_alignment = 2

[node name="RefreshModelsBtn" type="Button" parent="VBoxContainer/TabContainer/AI Hub/VBoxContainer/GridContainer/VBoxContainer2"]
auto_translate_mode = 1
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
icon = ExtResource("2_6xner")
icon_alignment = 1

[node name="VBoxContainer" type="HBoxContainer" parent="VBoxContainer/TabContainer/AI Hub/VBoxContainer/GridContainer"]
auto_translate_mode = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PanelContainer" type="ScrollContainer" parent="VBoxContainer/TabContainer/AI Hub/VBoxContainer/GridContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="ModelsListError" type="Label" parent="VBoxContainer/TabContainer/AI Hub/VBoxContainer/GridContainer/VBoxContainer/PanelContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Something went wrong querying for models, is the Server URL correct? Something went wrong querying for models, is the Server URL correct?"
autowrap_mode = 3

[node name="ModelsListOld" type="RichTextLabel" parent="VBoxContainer/TabContainer/AI Hub/VBoxContainer/GridContainer/VBoxContainer/PanelContainer"]
visible = false
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 2
autowrap_mode = 2
selection_enabled = true

[node name="ModelsList" type="ItemList" parent="VBoxContainer/TabContainer/AI Hub/VBoxContainer/GridContainer/VBoxContainer/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/focus = SubResource("StyleBoxEmpty_541qc")
max_text_lines = 10
auto_height = true

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/TabContainer/AI Hub/VBoxContainer/GridContainer/VBoxContainer"]
layout_mode = 2

[node name="NewAssistantTypeButton" type="Button" parent="VBoxContainer/TabContainer/AI Hub/VBoxContainer/GridContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Select a model, then press this button to create a new type of assistant."
disabled = true
text = "New assistant type"
icon = ExtResource("3_57y2f")

[node name="Control" type="Control" parent="VBoxContainer/TabContainer/AI Hub/VBoxContainer/GridContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="LLMProviderLabel" type="Label" parent="VBoxContainer/TabContainer/AI Hub/VBoxContainer/GridContainer"]
auto_translate_mode = 1
layout_mode = 2
text = "LLM Provider"
horizontal_alignment = 2

[node name="LLMProviderContainer" type="HBoxContainer" parent="VBoxContainer/TabContainer/AI Hub/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="LLMProviderOption" type="OptionButton" parent="VBoxContainer/TabContainer/AI Hub/VBoxContainer/GridContainer/LLMProviderContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Select the LLM provider to use"
selected = 0
item_count = 2
popup/item_1/id = 1

[node name="UrlLabel" type="Label" parent="VBoxContainer/TabContainer/AI Hub/VBoxContainer/GridContainer"]
unique_name_in_owner = true
auto_translate_mode = 1
layout_mode = 2
text = "Server URL"
horizontal_alignment = 2

[node name="AdvancedSettings" type="HBoxContainer" parent="VBoxContainer/TabContainer/AI Hub/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="UrlTxt" type="LineEdit" parent="VBoxContainer/TabContainer/AI Hub/VBoxContainer/GridContainer/AdvancedSettings"]
unique_name_in_owner = true
auto_translate_mode = 1
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "The URL of the host that runs your LLMs.

The default value is for the local host using Ollama's default port."
placeholder_text = "e.g. http://127.0.0.1:11434"

[node name="APIKeyTxt" type="LineEdit" parent="VBoxContainer/TabContainer/AI Hub/VBoxContainer/GridContainer/AdvancedSettings"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "The API key is a password some LLM providers require."
placeholder_text = "API key"
secret = true

[node name="GetKeyLink" type="LinkButton" parent="VBoxContainer/TabContainer/AI Hub/VBoxContainer/GridContainer/AdvancedSettings"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
text = "Get key"

[node name="Spacer" type="Control" parent="VBoxContainer/TabContainer/AI Hub/VBoxContainer/GridContainer/AdvancedSettings"]
layout_mode = 2

[node name="Spacer2" type="Control" parent="VBoxContainer/TabContainer/AI Hub/VBoxContainer/GridContainer/AdvancedSettings"]
auto_translate_mode = 1
layout_mode = 2

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/TabContainer/AI Hub/VBoxContainer/GridContainer/AdvancedSettings"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/TabContainer/AI Hub/VBoxContainer/GridContainer/AdvancedSettings"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/TabContainer/AI Hub/VBoxContainer/GridContainer/AdvancedSettings/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = -8

[node name="VersionLabel" type="Label" parent="VBoxContainer/TabContainer/AI Hub/VBoxContainer/GridContainer/AdvancedSettings/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "v1.7.3"
horizontal_alignment = 2

[node name="UpgradeBtn" type="Button" parent="VBoxContainer/TabContainer/AI Hub/VBoxContainer/GridContainer/AdvancedSettings/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
auto_translate_mode = 1
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
icon = ExtResource("4_77wrn")
flat = true
icon_alignment = 1

[node name="SupportBtn" type="Button" parent="VBoxContainer/TabContainer/AI Hub/VBoxContainer/GridContainer/AdvancedSettings/HBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
tooltip_text = "If you like this plugin, see how you can support it."
icon = ExtResource("4_mwqwj")
icon_alignment = 1

[node name="VersionHTTPRequest" type="HTTPRequest" parent="VBoxContainer/TabContainer/AI Hub/VBoxContainer/GridContainer/AdvancedSettings/HBoxContainer"]
unique_name_in_owner = true

[node name="Control" type="Control" parent="VBoxContainer/TabContainer/AI Hub/VBoxContainer/GridContainer/AdvancedSettings/HBoxContainer"]
layout_mode = 2

[connection signal="request_completed" from="ModelsHTTPRequest" to="." method="_on_models_http_request_completed"]
[connection signal="pressed" from="VBoxContainer/TabContainer/AI Hub/VBoxContainer/HBoxContainer/HBoxContainer/AssistantsRefreshBtn" to="." method="_on_assistants_refresh_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/TabContainer/AI Hub/VBoxContainer/GridContainer/VBoxContainer2/RefreshModelsBtn" to="." method="_on_refresh_models_btn_pressed"]
[connection signal="empty_clicked" from="VBoxContainer/TabContainer/AI Hub/VBoxContainer/GridContainer/VBoxContainer/PanelContainer/ModelsList" to="." method="_on_models_list_empty_clicked"]
[connection signal="item_selected" from="VBoxContainer/TabContainer/AI Hub/VBoxContainer/GridContainer/VBoxContainer/PanelContainer/ModelsList" to="." method="_on_models_list_item_selected"]
[connection signal="pressed" from="VBoxContainer/TabContainer/AI Hub/VBoxContainer/GridContainer/VBoxContainer/VBoxContainer/NewAssistantTypeButton" to="." method="_on_new_assistant_type_button_pressed"]
[connection signal="item_selected" from="VBoxContainer/TabContainer/AI Hub/VBoxContainer/GridContainer/LLMProviderContainer/LLMProviderOption" to="." method="_on_llm_provider_option_item_selected"]
[connection signal="text_changed" from="VBoxContainer/TabContainer/AI Hub/VBoxContainer/GridContainer/AdvancedSettings/UrlTxt" to="." method="_on_settings_changed"]
[connection signal="text_changed" from="VBoxContainer/TabContainer/AI Hub/VBoxContainer/GridContainer/AdvancedSettings/APIKeyTxt" to="." method="_on_settings_changed"]
[connection signal="pressed" from="VBoxContainer/TabContainer/AI Hub/VBoxContainer/GridContainer/AdvancedSettings/HBoxContainer/HBoxContainer/UpgradeBtn" to="." method="_on_upgrade_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/TabContainer/AI Hub/VBoxContainer/GridContainer/AdvancedSettings/HBoxContainer/SupportBtn" to="." method="_on_support_btn_pressed"]
[connection signal="request_completed" from="VBoxContainer/TabContainer/AI Hub/VBoxContainer/GridContainer/AdvancedSettings/HBoxContainer/VersionHTTPRequest" to="." method="_on_version_http_request_request_completed"]
